--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Document</title>
   <link rel="stylesheet" href="./css/normalize.css" />
-<link rel="stylesheet" href="./css/index.css" />
+  <link rel="stylesheet" href="./css/index.css" />
 </head>
+
 <body>
-  <nav class="main-menu">
-    <ul class="menu-list">
-      <li class="menu-item active">
-        <a href="#">Home</a></li>
-      <li class="menu-item">
-        <a href="#">Features</a></li>
-      <li class="menu-item">
-        <a href="#">Support</a></li>
-      <li class="menu-item">
-        <a href="#">Blog</a></li>
-    </ul>
-  </nav>
+  <div class="page-wrapper">
+    <nav class="main-menu">
+      <ul class="menu-list">
+        <li class="menu-item active">
+          <a href="#">Home</a></li>
+        <li class="menu-item">
+          <a href="#">Features</a></li>
+        <li class="menu-item">
+          <a href="#">Support</a></li>
+        <li class="menu-item">
+          <a href="#">Blog</a></li>
+      </ul>
+    </nav>
+    <div class="intro">
+      <img class="logo" src="./images/logo_app.png" alt="Application logo" width="111" height="86">
+      <h1 class="title">Shedule Planner</h1>
+    </div>
+    <section class="features">
+      <ul class="features-list content-wrapper">
+        <li class="feature security">Password protection</li>
+        <li class="feature duplicate">Copy & Paste feature</li>
+        <li class="feature repeating">Repeating tasks feature</li>
+        <li class="feature customization">Customizable alerts and notifications</li>
+      </ul>
+    </section>
+    <footer></footer>
+  </div>
 </body>
+
 </html>
