--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,39 @@
         <li class="feature customization">Customizable alerts and notifications</li>
       </ul>
     </section>
-    <footer></footer>
+    <footer class="footer">
+      <div class="content-wrapper">
+        <div class="footer-wrapper">
+          <nav class="social-links">
+            <h2>Connect</h2>
+            <ul class="links-list">
+              <li class="link"><a class="email" href="#">Email</a></li>
+              <li class="link"><a class="twitter" href="#">Twitter</a></li>
+              <li class="link"><a class="facebook" href="#">Facebook</a></li>
+              <li class="link"><a class="linkedin" href="#">LinkedIn</a></li>
+            </ul>
+          </nav>
+
+          <form action="#" class="subscribe-form">
+            <label for="" class="label">Subscribe to receive INTERSOG updates ceive INTERSOG updates</label>
+            <input type="email" name="email" />
+            <button type="submit">Subscribe</button>
+          </form>
+        </div>
+        <div class="partners">
+          <h2>Our partners</h2>
+          <ul class="partners-list">
+            <li class="partner-item"><a href="#"><img src="" alt=""><img src="./images/combo-app.png" alt="Comboapp"></a></li>
+            <li class="partner-item"><a href="#"><img src="./images/digi-117.png" alt="Digi117"></a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="copyright">
+        <div class="content-wrapper">
+            &copy; INTERSOG 2005-2012
+        </div>
+      </div>
+    </footer>
   </div>
 </body>
 
