add block with icons platforms and badge

--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,17 @@
       </ul>
     </nav>
     <div class="intro">
-      <img class="logo" src="./images/logo_app.png" alt="Application logo" width="111" height="86">
-      <h1 class="title">Shedule Planner</h1>
+      <div class="title-wrapper">
+        <img class="icon-badge" src="./images/badge.png" alt="Отметка про 1,5 миллион загрузок" width="120" height="121">
+        <img class="logo" src="./images/logo_app.png" alt="Application logo" width="111" height="86">
+        <h1 class="title">Shedule Planner</h1>
+      </div>
+      <ul class="platforms">
+        <li class="platform iphone"><a href="#iphone">iPhone</a> </li>
+        <li class="platform ipad"><a href="#ipad">iPad</a></li>
+        <li class="platform android"><a href="#android">Android</a></li>
+        <li class="platform kindle"><a href="#kindle">Kindle</a></li>
+      </ul>
     </div>
     <section class="features">
       <ul class="features-list content-wrapper">
@@ -58,7 +67,7 @@
         <div class="partners">
           <h2>Our partners</h2>
           <ul class="partners-list">
-            <li class="partner-item"><a href="#"><img src="" alt=""><img src="./images/combo-app.png" alt="Comboapp"></a></li>
+            <li class="partner-item"><a href="#"><img src="./images/combo-app.png" alt="Comboapp"></a></li>
             <li class="partner-item"><a href="#"><img src="./images/digi-117.png" alt="Digi117"></a></li>
           </ul>
         </div>
