add block comment

--- a/src/index.html
+++ b/src/index.html
@@ -42,47 +42,47 @@
         <li class="detail google-calendar">
           <h2>Google Calendar
             & iCal integration</h2>
-          <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+          <span class="detail-text">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
             sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis
             sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a
             odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent
             taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam
             ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin
             condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam, ut
-            aliquam massa nisl quis neque. Suspendisse in orci enim.</p>
+            aliquam massa nisl quis neque. Suspendisse in orci enim.</span>
         </li>
         <li class="detail dropbox">
           <h2>Dropbox backup</h2>
-          <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+          <span class="detail-text">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
             sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis
             sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a
             odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent
             taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam
             ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin
             condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam, ut
-            aliquam massa nisl quis neque. Suspendisse in orci enim.</p>
+            aliquam massa nisl quis neque. Suspendisse in orci enim.</span>
         </li>
         <li class="detail charts">
           <h2>Charts</h2>
-          <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+          <span class="detail-text">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
             sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis
             sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a
             odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent
             taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam
             ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin
             condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam, ut
-            aliquam massa nisl quis neque. Suspendisse in orci enim.</p>
+            aliquam massa nisl quis neque. Suspendisse in orci enim.</span>
         </li>
         <li class="detail planned">
           <h2>Planned vs Actual</h2>
-          <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+          <span class="detail-text">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
             sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis
             sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a
             odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent
             taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam
             ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin
             condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam, ut
-            aliquam massa nisl quis neque. Suspendisse in orci enim.</p>
+            aliquam massa nisl quis neque. Suspendisse in orci enim.</span>
         </li>
       </ul>
     </section>
@@ -93,6 +93,32 @@
         <li class="feature repeating">Repeating tasks feature</li>
         <li class="feature customization">Customizable alerts and notifications</li>
       </ul>
+    </section>
+    <section class="comments">
+      <ul class="comments-list content-wrapper">
+        <li class="comment">
+          <span class="comment-text">
+            “A fantastic planner for the iPad. Its very useful sorting features and easy to use interface make it a
+            real business-minded option for time management on iOS.”
+          </span>
+          <h3>AppAdvice.com</h3>
+        </li>
+        <li class="comment">
+          <span class="comment-text">
+            “Schedule Planner by INTERSOG can simplify your daily or weekly missions, plan your time and tasks to suit
+            your personal attributes.”
+          </span>
+          <h3>Product Reviews</h3>
+        </li>
+        <li class="comment">
+          <span class="comment-text">
+            “This app makes it easier for you to schedule your important plans daily and compare them side by side with
+            the actual activities you did on the day.”
+          </span>
+          <h3>ipadappsreviewer.com</h3>
+        </li>
+      </ul>
+    <button type="button">Read More</button>
     </section>
     <footer class="footer">
       <div class="content-wrapper">
@@ -108,7 +134,7 @@
           </nav>
 
           <form action="#" class="subscribe-form">
-            <label for="" class="label">Subscribe to receive INTERSOG updates ceive INTERSOG updates</label>
+            <label for="" class="label">Subscribe to receive INTERSOG updates</label>
             <input type="email" name="email" />
             <button type="submit">Subscribe</button>
           </form>
